fix: fixed out of boundary styling in modal display

--- a/src/pages/TallulahEmailAssistant/components/EmailReply/EmailReply.module.css
+++ b/src/pages/TallulahEmailAssistant/components/EmailReply/EmailReply.module.css
@@ -1,7 +1,10 @@
 .container {
   background-color: #fff;
-  width: 50vw;
+  width: 100%;
   height: 90vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .textField {
